# domparser-rs

./: Cargo.toml  README.md  README.zh-CN.md  domparser.d.ts  domparser.js  index.d.ts  index.js  package.json
.github/workflows/: CI.yml  ci.yml  release.yml
crates/domparser/: Cargo.toml
crates/domparser/src/: lib.rs  serializer.rs
crates/domparser/src/node/: mod.rs  modify.rs  properties.rs  query.rs  selectors.rs
crates/domparser_napi/: Cargo.toml  index.d.ts  index.js
crates/domparser_napi/src/: lib.rs
crates/domparser_napi/src/node_repr/: mod.rs  modify.rs  properties.rs  query.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: postbuild.js  sync-version.js
test/: domparser.spec.mjs  get_elements.spec.mjs  index.spec.mjs  more_else.spec.mjs  more_nodes.spec.mjs  selectors_namespace.spec.mjs
