[package]
edition     = "2021"
name        = "domparser"
version = "0.0.7"
description = "A super fast html parser and manipulator written in rust."
license     = "MIT"
repository  = "https://github.com/utooland/domparser-rs"

[dependencies]
html5ever         = "0.27.0"
indexmap          = "2.2.6"
markup5ever       = "0.11.0"
markup5ever_rcdom = "0.3.0"
tendril           = "0.4.3"
